src/test/deca/syntax/invalid/instanceof-rightOperandNull.synt
instanceof-rightOperandNull.deca:4: